--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "audio-param-transform": "~0.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mmckegg/custom-audio-node.git"
