--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "audio-param-transform": "~0.3.0"
+    "audio-param-transform": "^1.0.0"
   },
   "repository": {
     "type": "git",
